--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 50,
    "id": "recorded-postage",
    "metadata": {},
    "outputs": [
@@ -10,346 +10,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2020-02-29\n",
-      "1.0\n",
-      "0.0\n",
-      "0.0\n",
-      "1.0\n",
-      "4.0\n",
-      "0.0\n",
-      "12.0\n",
-      "0.0\n",
-      "1.0\n",
-      "2.0\n",
-      "13.0\n",
-      "9.0\n",
-      "0.0\n",
-      "47.0\n",
-      "39.0\n",
-      "0.0\n",
-      "40.0\n",
-      "54.0\n",
-      "69.0\n",
-      "265.0\n",
-      "126.0\n",
-      "102.0\n",
-      "121.0\n",
-      "219.0\n",
-      "204.0\n",
-      "235.0\n",
-      "255.0\n",
-      "302.0\n",
-      "294.0\n",
-      "200.0\n",
-      "295.0\n",
-      "325.0\n",
-      "212.0\n",
-      "402.0\n",
-      "424.0\n",
-      "331.0\n",
-      "390.0\n",
-      "370.0\n",
-      "345.0\n",
-      "365.0\n",
-      "500.0\n",
-      "1515.0\n",
-      "839.0\n",
-      "727.0\n",
-      "992.0\n",
-      "832.0\n",
-      "1068.0\n",
-      "724.0\n",
-      "709.0\n",
-      "778.0\n",
-      "493.0\n",
-      "401.0\n",
-      "388.0\n",
-      "631.0\n",
-      "936.0\n",
-      "577.0\n",
-      "377.0\n",
-      "701.0\n",
-      "386.0\n",
-      "229.0\n",
-      "376.0\n",
-      "359.0\n",
-      "221.0\n",
-      "343.0\n",
-      "330.0\n",
-      "266.0\n",
-      "211.0\n",
-      "265.0\n",
-      "137.0\n",
-      "156.0\n",
-      "219.0\n",
-      "236.0\n",
-      "139.0\n",
-      "107.0\n",
-      "159.0\n",
-      "426.0\n",
-      "129.0\n",
-      "92.0\n",
-      "64.0\n",
-      "88.0\n",
-      "51.0\n",
-      "64.0\n",
-      "76.0\n",
-      "115.0\n",
-      "76.0\n",
-      "57.0\n",
-      "59.0\n",
-      "37.0\n",
-      "68.0\n",
-      "38.0\n",
-      "35.0\n",
-      "53.0\n",
-      "61.0\n",
-      "72.0\n",
-      "4.0\n",
-      "45.0\n",
-      "31.0\n",
-      "21.0\n",
-      "20.0\n",
-      "18.0\n",
-      "6.0\n",
-      "8.0\n",
-      "16.0\n",
-      "7.0\n",
-      "12.0\n",
-      "45.0\n",
-      "8.0\n",
-      "18.0\n",
-      "13.0\n",
-      "7.0\n",
-      "14.0\n",
-      "13.0\n",
-      "6.0\n",
-      "5.0\n",
-      "4.0\n",
-      "8.0\n",
-      "5.0\n",
-      "9.0\n",
-      "9.0\n",
-      "23.0\n",
-      "2.0\n",
-      "23.0\n",
-      "11.0\n",
-      "4.0\n",
-      "12.0\n",
-      "9.0\n",
-      "11.0\n",
-      "18.0\n",
-      "4.0\n",
-      "7.0\n",
-      "4.0\n",
-      "23.0\n",
-      "24.0\n",
-      "22.0\n",
-      "17.0\n",
-      "10.0\n",
-      "32.0\n",
-      "13.0\n",
-      "15.0\n",
-      "32.0\n",
-      "20.0\n",
-      "10.0\n",
-      "6.0\n",
-      "36.0\n",
-      "17.0\n",
-      "7.0\n",
-      "19.0\n",
-      "24.0\n",
-      "12.0\n",
-      "11.0\n",
-      "37.0\n",
-      "13.0\n",
-      "85.0\n",
-      "38.0\n",
-      "44.0\n",
-      "53.0\n",
-      "46.0\n",
-      "45.0\n",
-      "50.0\n",
-      "69.0\n",
-      "98.0\n",
-      "174.0\n",
-      "68.0\n",
-      "56.0\n",
-      "33.0\n",
-      "37.0\n",
-      "91.0\n",
-      "66.0\n",
-      "196.0\n",
-      "66.0\n",
-      "56.0\n",
-      "186.0\n",
-      "48.0\n",
-      "129.0\n",
-      "79.0\n",
-      "153.0\n",
-      "61.0\n",
-      "147.0\n",
-      "85.0\n",
-      "162.0\n",
-      "90.0\n",
-      "125.0\n",
-      "142.0\n",
-      "40.0\n",
-      "51.0\n",
-      "214.0\n",
-      "89.0\n",
-      "92.0\n",
-      "97.0\n",
-      "231.0\n",
-      "138.0\n",
-      "102.0\n",
-      "306.0\n",
-      "84.0\n",
-      "196.0\n",
-      "211.0\n",
-      "159.0\n",
-      "255.0\n",
-      "207.0\n",
-      "357.0\n",
-      "250.0\n",
-      "224.0\n",
-      "248.0\n",
-      "267.0\n",
-      "395.0\n",
-      "188.0\n",
-      "323.0\n",
-      "231.0\n",
-      "319.0\n",
-      "321.0\n",
-      "245.0\n",
-      "430.0\n",
-      "387.0\n",
-      "363.0\n",
-      "415.0\n",
-      "442.0\n",
-      "466.0\n",
-      "605.0\n",
-      "364.0\n",
-      "517.0\n",
-      "424.0\n",
-      "611.0\n",
-      "502.0\n",
-      "617.0\n",
-      "1011.0\n",
-      "814.0\n",
-      "823.0\n",
-      "808.0\n",
-      "1084.0\n",
-      "1186.0\n",
-      "998.0\n",
-      "1251.0\n",
-      "1284.0\n",
-      "1031.0\n",
-      "1263.0\n",
-      "1166.0\n",
-      "1054.0\n",
-      "785.0\n",
-      "847.0\n",
-      "1020.0\n",
-      "939.0\n",
-      "700.0\n",
-      "667.0\n",
-      "863.0\n",
-      "762.0\n",
-      "397.0\n",
-      "546.0\n",
-      "748.0\n",
-      "298.0\n",
-      "435.0\n",
-      "563.0\n",
-      "492.0\n",
-      "317.0\n",
-      "539.0\n",
-      "265.0\n",
-      "230.0\n",
-      "358.0\n",
-      "385.0\n",
-      "467.0\n",
-      "427.0\n",
-      "377.0\n",
-      "453.0\n",
-      "330.0\n",
-      "372.0\n",
-      "415.0\n",
-      "329.0\n",
-      "341.0\n",
-      "318.0\n",
-      "250.0\n",
-      "219.0\n",
-      "257.0\n",
-      "307.0\n",
-      "205.0\n",
-      "243.0\n",
-      "299.0\n",
-      "303.0\n",
-      "254.0\n",
-      "268.0\n",
-      "162.0\n",
-      "263.0\n",
-      "457.0\n",
-      "298.0\n",
-      "222.0\n",
-      "214.0\n",
-      "218.0\n",
-      "303.0\n",
-      "304.0\n",
-      "249.0\n",
-      "429.0\n",
-      "264.0\n",
-      "327.0\n",
-      "421.0\n",
-      "481.0\n",
-      "576.0\n",
-      "522.0\n",
-      "766.0\n",
-      "725.0\n",
-      "961.0\n",
-      "927.0\n",
-      "918.0\n",
-      "1025.0\n",
-      "1296.0\n",
-      "735.0\n",
-      "765.0\n",
-      "1545.0\n",
-      "1718.0\n",
-      "1622.0\n",
-      "1753.0\n",
-      "3394.0\n",
-      "4961.0\n",
-      "6110.0\n",
-      "5325.0\n",
-      "7832.0\n",
-      "6503.0\n",
-      "8227.0\n",
-      "4843.0\n",
-      "6886.0\n",
-      "4926.0\n",
-      "3052.0\n",
-      "3553.0\n",
-      "3913.0\n",
-      "3491.0\n",
-      "3232.0\n",
-      "2946.0\n",
-      "2117.0\n",
-      "1996.0\n",
-      "2485.0\n",
-      "2598.0\n",
-      "2357.0\n",
-      "1905.0\n",
-      "1370.0\n",
-      "1369.0\n",
-      "928.0\n",
-      "1331.0\n",
-      "2463.0\n",
-      "247.0\n",
-      "1411.0\n",
-      "1244.0\n",
-      "1006.0\n"
+      "2020-02-29\n"
+     ]
+    },
+    {
+     "ename": "KeyError",
+     "evalue": "'location'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-50-cfbb58fe678d>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     12\u001b[0m         \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtest\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mitem\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'data'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'date'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     13\u001b[0m         \u001b[1;32mfor\u001b[0m \u001b[0mres\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mtest\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mitem\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'data'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 14\u001b[1;33m             \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mres\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'location'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     15\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mKeyError\u001b[0m: 'location'"
      ]
     }
    ],
@@ -367,14 +39,14 @@
     "    if test[item]['location'] == \"Ireland\" :\n",
     "        print(test[item]['data'][0]['date'])\n",
     "        for res in test[item]['data']:\n",
-    "            print(res['new_cases'])\n",
+    "            print(res['location'])\n",
     "        "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "confident-irrigation",
+   "id": "directed-handle",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -382,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "sacred-forth",
+   "id": "divided-colonial",
    "metadata": {},
    "outputs": [],
    "source": []
