--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -2,45 +2,131 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 1,
    "id": "recorded-postage",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2020-02-29\n"
-     ]
-    },
-    {
      "ename": "KeyError",
-     "evalue": "'location'",
+     "evalue": "'new_cases'",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-50-cfbb58fe678d>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     12\u001b[0m         \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtest\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mitem\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'data'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'date'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     13\u001b[0m         \u001b[1;32mfor\u001b[0m \u001b[0mres\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mtest\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mitem\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'data'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 14\u001b[1;33m             \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mres\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'location'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     15\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mKeyError\u001b[0m: 'location'"
+      "\u001b[1;32m<ipython-input-1-3681dfad070c>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     26\u001b[0m     \u001b[1;32mfor\u001b[0m \u001b[0mres\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mdata\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mitem\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'data'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     27\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mres\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'date'\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m==\u001b[0m \u001b[0mdtf\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 28\u001b[1;33m             \u001b[0mpair\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[0mdata\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mitem\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'location'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mres\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'new_cases'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     29\u001b[0m             \u001b[0moutStr\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m\"%s : %s\"\u001b[0m \u001b[1;33m%\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mpair\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mpair\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     30\u001b[0m             \u001b[0mtidyArr\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpair\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mKeyError\u001b[0m: 'new_cases'"
      ]
     }
    ],
    "source": [
     "import folium\n",
     "from folium.map import FeatureGroup\n",
+    "from folium.plugins import MarkerCluster\n",
+    "\n",
     "from geopy.geocoders import ArcGIS\n",
     "import webbrowser\n",
     "import pandas as pd\n",
+    "from datetime import datetime, timedelta\n",
+    "import json\n",
     "\n",
-    "test = pd.read_json(r\"cov_02-02-21.json\")\n",
-    "test2 = pd.DataFrame(test)\n",
+    "load = open(\"world.json\", \"r\",encoding=\"utf-8-sig\").read()\n",
     "\n",
-    "for item in test:\n",
-    "    if test[item]['location'] == \"Ireland\" :\n",
-    "        print(test[item]['data'][0]['date'])\n",
-    "        for res in test[item]['data']:\n",
-    "            print(res['location'])\n",
-    "        "
+    "worldMap = folium.Map(tiles=\"cartodbpositron\")\n",
+    "fg = folium.FeatureGroup(name=\"foo\")\n",
+    "fg.add_child(folium.GeoJson(data=load))\n",
+    "worldMap.add_child(fg)\n",
+    "worldMap.save(\"test.html\")\n",
+    "\n",
+    "data = pd.read_json(r\"cov_03-02-21.json\")\n",
+    "\n",
+    "dt = (datetime.today().now() - timedelta(days=1))\n",
+    "dtf = dt.strftime(\"%Y-%m-%d\")\n",
+    "\n",
+    "tidyArr = []\n",
+    "for item in data:\n",
+    "    for res in data[item]['data']:\n",
+    "        if res['date'] == dtf:\n",
+    "            pair = [data[item]['location'],int(res['new_cases'])]\n",
+    "            outStr = \"%s : %s\" % (pair[0],pair[1])\n",
+    "            tidyArr.append(pair)\n",
+    "            # print(tidyArr)\n",
+    "            # print(tidyArr[0])\n",
+    "\n",
+    "load = [open(\"world.json\", \"r\",encoding=\"utf-8-sig\").read(), tidyArr]\n",
+    "\n",
+    "def conv(arr):\n",
+    "    res = {}\n",
+    "    for i in arr:\n",
+    "        res[str(i[0])] = i[1]\n",
+    "    return res\n",
+    "# print(tidyArr)\n",
+    "\n",
+    "tidyDict = conv(tidyArr)\n",
+    "# print(tidyDict)\n",
+    "\n",
+    "for key in tidyDict.items():\n",
+    "   print(key)\n",
+    "print('______________________________________________________________\\n')\n",
+    "\n",
+    "def colorFn(x):\n",
+    "    color = 'white'\n",
+    "    name = x['properties']['NAME']\n",
+    "\n",
+    "    #temp fix for mismatching country names\n",
+    "    if name == \"Iran (Islamic Republic of)\":\n",
+    "            name = \"Iran\"\n",
+    "    if name == \"Lao People's Democratic Republic\":\n",
+    "            name = \"Laos\"\n",
+    "    if name == \"The former Yugoslav Republic of Macedonia\":\n",
+    "            name = \"North Macedonia\"\n",
+    "    if name == \"Viet Nam\":\n",
+    "            name = \"Vietnam\"        \n",
+    "    if name == \"Swaziland\":\n",
+    "            name = \"Eswatini\" \n",
+    "    if name == \"Korea, Republic of\":\n",
+    "            name = \"South Korea\"\n",
+    "    if name == \"Republic of Moldova\":\n",
+    "            name = \"Moldova\"\n",
+    "    if name == \"Syrian Arab Republic\":\n",
+    "            name = \"Syria\" \n",
+    "    if name == \"Democratic Republic of the Congo\":\n",
+    "            name = \"Democratic Republic of Congo\"      \n",
+    "    if name == \"Libyan Arab Jamahiriya\":\n",
+    "            name = \"Libya\" \n",
+    "    if name == \"Czech Republic\":\n",
+    "            name = \"Czechia\"        \n",
+    "\n",
+    "    if name not in tidyDict:\n",
+    "        \n",
+    "        print('%s nope' % (name))\n",
+    "    else :\n",
+    "        if tidyDict[name] >= 10000:\n",
+    "            color = '#800000'\n",
+    "        elif tidyDict[name] >= 1000:\n",
+    "            color = '#d47f7f'\n",
+    "        elif tidyDict[name] >= 500 and tidyDict[name] < 1000:\n",
+    "            color = 'orange'\n",
+    "        elif tidyDict[name] >= 100 and tidyDict[name] < 500:\n",
+    "            color = 'yellow'\n",
+    "        elif tidyDict[name] >= 10 and tidyDict[name] < 100:\n",
+    "            color = '#67d7db'\n",
+    "        else :\n",
+    "            color = 'green'    \n",
+    "    return color\n",
+    "\n",
+    "\n",
+    "worldMap = folium.Map(tiles=\"cartodbpositron\")\n",
+    "fg = folium.FeatureGroup(name=\"foo\")\n",
+    "color=\"purple\"\n",
+    "fg.add_child(folium.GeoJson(data=open(\"world.json\", \"r\",encoding=\"utf-8-sig\").read(),\n",
+    "style_function= lambda x : {'fillColor':colorFn(x), 'stroke':'black'}))\n",
+    "\n",
+    "worldMap.add_child(fg)\n",
+    "worldMap.add_child(folium.LayerControl())\n",
+    "\n",
+    "worldMap.save(\"cov_map.html\")\n",
+    "\n",
+    "webbrowser.open(\"cov_map.html\")"
    ]
   },
   {
